# rate-limiting

./: README.md  docker-compose.yaml  nginx.conf
rate-limiting/: Cargo.toml  Dockerfile
rate-limiting/src/: lib.rs  main.rs
rate-limiting/src/http/: app_state.rs  mod.rs  routes.rs
rate-limiting/src/http/handlers/: get_instance.rs  mod.rs
rate-limiting/src/http/middlewares/: rate_limit.rs
rate-limiting/src/redis/: mod.rs
rate-limiting/src/services/instance/: mod.rs
rate-limiting/src/services/instance/dtos/: get_instance_response_dto.rs  mod.rs
