[package]
name = "rate-limiting"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
redis = { version = "0.29", features = ["tokio-comp", "aio"] }
